--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -6,6 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Debug project structure
+        run: |
+          ls -la
+          ls -la tests/
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
