--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -19,4 +19,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
       - name: Run tests
-        run: pytest tests/ -v
+        run: pytest -v
