--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -18,5 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
       - name: Run tests
         run: pytest -v
