--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Check formatting with Black
         run: black --check .
       - name: Lint with Flake8
-        run: flake8 .
+        run: flake8 --exclude=.venv .
